RedLangParser.ts
// Generated from src/config/RedLang.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import type { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import type { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import type { TokenStream } from "antlr4ts/TokenStream";
import type { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import type { RedLangListener } from "./src/generated/RedLangListener";
import type { RedLangVisitor } from "./RedLangVisitor";


export class RedLangParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly DECLARE = 5;
	public static readonly SET = 6;
	public static readonly CHECK = 7;
	public static readonly OTHERWISE = 8;
	public static readonly REPEAT = 9;
	public static readonly LOOP = 10;
	public static readonly FUNC = 11;
	public static readonly GIVE = 12;
	public static readonly SHOW = 13;
	public static readonly ASK = 14;
	public static readonly TRUE = 15;
	public static readonly FALSE = 16;
	public static readonly NULL = 17;
	public static readonly READFILE = 18;
	public static readonly WRITEFILE = 19;
	public static readonly OPEN = 20;
	public static readonly CLOSE = 21;
	public static readonly AS = 22;
	public static readonly LPAREN = 23;
	public static readonly RPAREN = 24;
	public static readonly LBRACE = 25;
	public static readonly RBRACE = 26;
	public static readonly LBRACK = 27;
	public static readonly RBRACK = 28;
	public static readonly COMMA = 29;
	public static readonly COLON = 30;
	public static readonly SEMI = 31;
	public static readonly QUESTION = 32;
	public static readonly EQUAL = 33;
	public static readonly EQ = 34;
	public static readonly NEQ = 35;
	public static readonly GT = 36;
	public static readonly LT = 37;
	public static readonly GE = 38;
	public static readonly LE = 39;
	public static readonly ADD = 40;
	public static readonly SUB = 41;
	public static readonly MUL = 42;
	public static readonly DIV = 43;
	public static readonly MOD = 44;
	public static readonly INT_LIT = 45;
	public static readonly FLOAT_LIT = 46;
	public static readonly STRING_LIT = 47;
	public static readonly IDENT = 48;
	public static readonly WS = 49;
	public static readonly LINE_COMMENT = 50;
	public static readonly COMMENT = 51;
	public static readonly OR = 52;
	public static readonly AND = 53;
	public static readonly NOT = 54;
	public static readonly RULE_program = 0;
	public static readonly RULE_topLevelDecl = 1;
	public static readonly RULE_declaration = 2;
	public static readonly RULE_functionDecl = 3;
	public static readonly RULE_parameters = 4;
	public static readonly RULE_param = 5;
	public static readonly RULE_type = 6;
	public static readonly RULE_baseType = 7;
	public static readonly RULE_statement = 8;
	public static readonly RULE_assignment = 9;
	public static readonly RULE_returnStmt = 10;
	public static readonly RULE_ifStmt = 11;
	public static readonly RULE_whileStmt = 12;
	public static readonly RULE_forStmt = 13;
	public static readonly RULE_forInit = 14;
	public static readonly RULE_forUpdate = 15;
	public static readonly RULE_printStmt = 16;
	public static readonly RULE_readStmt = 17;
	public static readonly RULE_fileStmts = 18;
	public static readonly RULE_block = 19;
	public static readonly RULE_expression = 20;
	public static readonly RULE_logicOr = 21;
	public static readonly RULE_logicAnd = 22;
	public static readonly RULE_equality = 23;
	public static readonly RULE_comparison = 24;
	public static readonly RULE_additive = 25;
	public static readonly RULE_multiplicative = 26;
	public static readonly RULE_unary = 27;
	public static readonly RULE_primary = 28;
	public static readonly RULE_callExpr = 29;
	public static readonly RULE_arrayLiteral = 30;
	public static readonly RULE_arguments = 31;
	public static readonly RULE_literal = 32;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "topLevelDecl", "declaration", "functionDecl", "parameters", 
		"param", "type", "baseType", "statement", "assignment", "returnStmt", 
		"ifStmt", "whileStmt", "forStmt", "forInit", "forUpdate", "printStmt", 
		"readStmt", "fileStmts", "block", "expression", "logicOr", "logicAnd", 
		"equality", "comparison", "additive", "multiplicative", "unary", "primary", 
		"callExpr", "arrayLiteral", "arguments", "literal",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'i'", "'f'", "'s'", "'b'", "'declare'", "'set'", "'check'", 
		"'otherwise'", "'repeat'", "'loop'", "'func'", "'give'", "'show'", "'ask'", 
		"'true'", "'false'", "'null'", "'readfile'", "'writefile'", "'open'", 
		"'close'", "'as'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'", 
		"';'", "'?'", "'='", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", 
		"'-'", "'*'", "'/'", "'%'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "DECLARE", "SET", 
		"CHECK", "OTHERWISE", "REPEAT", "LOOP", "FUNC", "GIVE", "SHOW", "ASK", 
		"TRUE", "FALSE", "NULL", "READFILE", "WRITEFILE", "OPEN", "CLOSE", "AS", 
		"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "COLON", 
		"SEMI", "QUESTION", "EQUAL", "EQ", "NEQ", "GT", "LT", "GE", "LE", "ADD", 
		"SUB", "MUL", "DIV", "MOD", "INT_LIT", "FLOAT_LIT", "STRING_LIT", "IDENT", 
		"WS", "LINE_COMMENT", "COMMENT", "OR", "AND", "NOT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(RedLangParser._LITERAL_NAMES, RedLangParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return RedLangParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "RedLang.g4"; }

	// @Override
	public get ruleNames(): string[] { return RedLangParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return RedLangParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(RedLangParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, RedLangParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << RedLangParser.DECLARE) | (1 << RedLangParser.SET) | (1 << RedLangParser.CHECK) | (1 << RedLangParser.REPEAT) | (1 << RedLangParser.LOOP) | (1 << RedLangParser.FUNC) | (1 << RedLangParser.GIVE) | (1 << RedLangParser.SHOW) | (1 << RedLangParser.ASK) | (1 << RedLangParser.READFILE) | (1 << RedLangParser.WRITEFILE) | (1 << RedLangParser.OPEN) | (1 << RedLangParser.CLOSE) | (1 << RedLangParser.LBRACE))) !== 0)) {
				{
				this.state = 68;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case RedLangParser.DECLARE:
				case RedLangParser.FUNC:
					{
					this.state = 66;
					this.topLevelDecl();
					}
					break;
				case RedLangParser.SET:
				case RedLangParser.CHECK:
				case RedLangParser.REPEAT:
				case RedLangParser.LOOP:
				case RedLangParser.GIVE:
				case RedLangParser.SHOW:
				case RedLangParser.ASK:
				case RedLangParser.READFILE:
				case RedLangParser.WRITEFILE:
				case RedLangParser.OPEN:
				case RedLangParser.CLOSE:
				case RedLangParser.LBRACE:
					{
					this.state = 67;
					this.statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 72;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 73;
			this.match(RedLangParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public topLevelDecl(): TopLevelDeclContext {
		let _localctx: TopLevelDeclContext = new TopLevelDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, RedLangParser.RULE_topLevelDecl);
		try {
			this.state = 77;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case RedLangParser.DECLARE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 75;
				this.declaration();
				}
				break;
			case RedLangParser.FUNC:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 76;
				this.functionDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, RedLangParser.RULE_declaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this.match(RedLangParser.DECLARE);
			this.state = 80;
			this.match(RedLangParser.IDENT);
			this.state = 81;
			this.match(RedLangParser.COLON);
			this.state = 82;
			this.type();
			this.state = 85;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === RedLangParser.EQUAL) {
				{
				this.state = 83;
				this.match(RedLangParser.EQUAL);
				this.state = 84;
				this.expression();
				}
			}

			this.state = 87;
			this.match(RedLangParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDecl(): FunctionDeclContext {
		let _localctx: FunctionDeclContext = new FunctionDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, RedLangParser.RULE_functionDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 89;
			this.match(RedLangParser.FUNC);
			this.state = 90;
			this.match(RedLangParser.IDENT);
			this.state = 91;
			this.match(RedLangParser.LPAREN);
			this.state = 93;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === RedLangParser.IDENT) {
				{
				this.state = 92;
				this.parameters();
				}
			}

			this.state = 95;
			this.match(RedLangParser.RPAREN);
			this.state = 96;
			this.match(RedLangParser.COLON);
			this.state = 97;
			this.type();
			this.state = 98;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parameters(): ParametersContext {
		let _localctx: ParametersContext = new ParametersContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, RedLangParser.RULE_parameters);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.param();
			this.state = 105;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === RedLangParser.COMMA) {
				{
				{
				this.state = 101;
				this.match(RedLangParser.COMMA);
				this.state = 102;
				this.param();
				}
				}
				this.state = 107;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public param(): ParamContext {
		let _localctx: ParamContext = new ParamContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, RedLangParser.RULE_param);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.match(RedLangParser.IDENT);
			this.state = 109;
			this.match(RedLangParser.COLON);
			this.state = 110;
			this.type();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public type(): TypeContext {
		let _localctx: TypeContext = new TypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, RedLangParser.RULE_type);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this.baseType();
			this.state = 114;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === RedLangParser.QUESTION) {
				{
				this.state = 113;
				this.match(RedLangParser.QUESTION);
				}
			}

			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === RedLangParser.LBRACK) {
				{
				{
				this.state = 116;
				this.match(RedLangParser.LBRACK);
				this.state = 117;
				this.match(RedLangParser.RBRACK);
				}
				}
				this.state = 122;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public baseType(): BaseTypeContext {
		let _localctx: BaseTypeContext = new BaseTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, RedLangParser.RULE_baseType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << RedLangParser.T__0) | (1 << RedLangParser.T__1) | (1 << RedLangParser.T__2) | (1 << RedLangParser.T__3))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, RedLangParser.RULE_statement);
		try {
			this.state = 134;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case RedLangParser.LBRACE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 125;
				this.block();
				}
				break;
			case RedLangParser.SET:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 126;
				this.assignment();
				}
				break;
			case RedLangParser.CHECK:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 127;
				this.ifStmt();
				}
				break;
			case RedLangParser.REPEAT:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 128;
				this.whileStmt();
				}
				break;
			case RedLangParser.LOOP:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 129;
				this.forStmt();
				}
				break;
			case RedLangParser.GIVE:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 130;
				this.returnStmt();
				}
				break;
			case RedLangParser.SHOW:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 131;
				this.printStmt();
				}
				break;
			case RedLangParser.ASK:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 132;
				this.readStmt();
				}
				break;
			case RedLangParser.READFILE:
			case RedLangParser.WRITEFILE:
			case RedLangParser.OPEN:
			case RedLangParser.CLOSE:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 133;
				this.fileStmts();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignment(): AssignmentContext {
		let _localctx: AssignmentContext = new AssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, RedLangParser.RULE_assignment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this.match(RedLangParser.SET);
			this.state = 137;
			this.match(RedLangParser.IDENT);
			this.state = 138;
			this.match(RedLangParser.EQUAL);
			this.state = 139;
			this.expression();
			this.state = 140;
			this.match(RedLangParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public returnStmt(): ReturnStmtContext {
		let _localctx: ReturnStmtContext = new ReturnStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, RedLangParser.RULE_returnStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 142;
			this.match(RedLangParser.GIVE);
			this.state = 143;
			this.expression();
			this.state = 144;
			this.match(RedLangParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStmt(): IfStmtContext {
		let _localctx: IfStmtContext = new IfStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, RedLangParser.RULE_ifStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 146;
			this.match(RedLangParser.CHECK);
			this.state = 147;
			this.match(RedLangParser.LPAREN);
			this.state = 148;
			this.expression();
			this.state = 149;
			this.match(RedLangParser.RPAREN);
			this.state = 150;
			this.block();
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === RedLangParser.OTHERWISE) {
				{
				this.state = 151;
				this.match(RedLangParser.OTHERWISE);
				this.state = 152;
				this.block();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileStmt(): WhileStmtContext {
		let _localctx: WhileStmtContext = new WhileStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, RedLangParser.RULE_whileStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 155;
			this.match(RedLangParser.REPEAT);
			this.state = 156;
			this.match(RedLangParser.LPAREN);
			this.state = 157;
			this.expression();
			this.state = 158;
			this.match(RedLangParser.RPAREN);
			this.state = 159;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forStmt(): ForStmtContext {
		let _localctx: ForStmtContext = new ForStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, RedLangParser.RULE_forStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 161;
			this.match(RedLangParser.LOOP);
			this.state = 162;
			this.match(RedLangParser.LPAREN);
			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === RedLangParser.DECLARE || _la === RedLangParser.SET) {
				{
				this.state = 163;
				this.forInit();
				}
			}

			this.state = 166;
			this.match(RedLangParser.SEMI);
			this.state = 168;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << RedLangParser.TRUE) | (1 << RedLangParser.FALSE) | (1 << RedLangParser.NULL) | (1 << RedLangParser.LPAREN) | (1 << RedLangParser.LBRACK))) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (RedLangParser.SUB - 41)) | (1 << (RedLangParser.INT_LIT - 41)) | (1 << (RedLangParser.FLOAT_LIT - 41)) | (1 << (RedLangParser.STRING_LIT - 41)) | (1 << (RedLangParser.IDENT - 41)) | (1 << (RedLangParser.NOT - 41)))) !== 0)) {
				{
				this.state = 167;
				this.expression();
				}
			}

			this.state = 170;
			this.match(RedLangParser.SEMI);
			this.state = 172;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === RedLangParser.SET) {
				{
				this.state = 171;
				this.forUpdate();
				}
			}

			this.state = 174;
			this.match(RedLangParser.RPAREN);
			this.state = 175;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forInit(): ForInitContext {
		let _localctx: ForInitContext = new ForInitContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, RedLangParser.RULE_forInit);
		try {
			this.state = 182;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case RedLangParser.DECLARE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 177;
				this.declaration();
				}
				break;
			case RedLangParser.SET:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 178;
				this.match(RedLangParser.SET);
				this.state = 179;
				this.match(RedLangParser.IDENT);
				this.state = 180;
				this.match(RedLangParser.EQUAL);
				this.state = 181;
				this.expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forUpdate(): ForUpdateContext {
		let _localctx: ForUpdateContext = new ForUpdateContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, RedLangParser.RULE_forUpdate);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 184;
			this.match(RedLangParser.SET);
			this.state = 185;
			this.match(RedLangParser.IDENT);
			this.state = 186;
			this.match(RedLangParser.EQUAL);
			this.state = 187;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public printStmt(): PrintStmtContext {
		let _localctx: PrintStmtContext = new PrintStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, RedLangParser.RULE_printStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 189;
			this.match(RedLangParser.SHOW);
			this.state = 190;
			this.match(RedLangParser.LPAREN);
			this.state = 191;
			this.expression();
			this.state = 192;
			this.match(RedLangParser.RPAREN);
			this.state = 193;
			this.match(RedLangParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public readStmt(): ReadStmtContext {
		let _localctx: ReadStmtContext = new ReadStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, RedLangParser.RULE_readStmt);
		try {
			this.state = 204;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 195;
				this.match(RedLangParser.ASK);
				this.state = 196;
				this.match(RedLangParser.LPAREN);
				this.state = 197;
				this.match(RedLangParser.RPAREN);
				this.state = 198;
				this.match(RedLangParser.SEMI);
				}
				break;
